--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,4 +1,4 @@
 description = "Finds tracks on alternate platforms"
 name="MuSwitch"
-url=""
+url="https://github.com/Gluton-Official/MuSwitch"
 version="0.0.1"
